新增標題標籤2

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     
     <h1>哈囉</h1>
+    <h2>標題二</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur excepturi molestias provident quae asperiores ipsam totam. Aperiam qui pariatur unde enim commodi, error exercitationem voluptatum excepturi non. Doloribus, nobis debitis?</p>
 </body>
 </html>
