--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 </head>
 <body>
     
-    <h1>哈囉</h1>
-    <h2>標題二</h2>
-    <p>ppppppppppppppLorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur excepturi molestias provident quae asperiores ipsam totam. Aperiam qui pariatur unde enim commodi, error exercitationem voluptatum excepturi non. Doloribus, nobis debitis?</p>
-</body>
+    <h1>dev 標題</h1>
+    <h2>dev 小標</h2>
+    
 </html>
