--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 </head>
 <body>
     
-    <h1>哈囉</h1>
-    <h2>標題二</h2>
-    <p>ppppppppppppppLorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur excepturi molestias provident quae asperiores ipsam totam. Aperiam qui pariatur unde enim commodi, error exercitationem voluptatum excepturi non. Doloribus, nobis debitis?</p>
+    <h1>標題master</h1>
+    <h2>標題2 master</h2>
 </body>
 </html>
