--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     
-    <h1>dev 標題</h1>
-    <h2>dev 小標</h2>
+    <h1>dev 練習合併衝突</h1>
+    <h2>dev 練習</h2>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet beatae repellat maiores ut velit magni, aut id dignissimos, at, aliquam illo quo facere alias nemo natus culpa nesciunt reprehenderit quisquam!</p>
     
 </html>
