--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
 </head>
 <body>
     
-    <h1>標題master</h1>
-    <h2>標題2 master</h2>
+    <h1>標題master練習2</h1>
+    <h2>標題2 master 練習二</h2>
 </body>
-    <h1>dev 標題</h1>
-    <h2>dev 小標</h2>
     
 </html>
